# test-mcp

./: .env.example  .gitignore  README.md  entrypoint.py  pyproject.toml
app/: __init__.py  server.py
app/core/: config.py
app/core/agents/: simple_agent.py
app/routers/: tool_router.py
